Fix and improve many aspects of the application (security, exceptions, tests).

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 ENV=dev
-LANG=en
+LANG=en_US.UTF-8
 INCLUDE_PATHS=src
 EXCLUDE_PATHS=.git,.hg
 SAVE_DIR=docs
 OUTPUT_DIR=docs
+BACKUP_DIR=~/.docmd/archives
+VENV_PATH=~/.docmd/venv
 TEMPLATE=default.html
