Customizations, themes and dark mode.
- Add a visual indicator to show where you are in the navigation;
- Allow to define and choose a theme, added dark mode theme;
- Added CSS overrides and JS script to the template;
- Better Bootstrap support, allow to use local or external BS;
- Added favicons and logos for various displays;
- Added a footer to the default template;

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ OUTPUT_DIR=docs
 BACKUP_DIR=~/.docmd/archives
 VENV_PATH=~/.docmd/venv
 TEMPLATE=default.html
+NAV_TITLE=Documentation
+THEME=default
+USE_EXTERNAL_ASSETS=False
