--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 ENV=dev
 LANG=en_US.UTF-8
+# Example with a simple string.
 INCLUDE_PATHS=src
+# Example with multiple projects (JSON).
+INCLUDE_PATHS=[{"path": "src", "name": "Project A", "excludes": ".git"}, {"path": "../external", "name": "Project B"}]
 EXCLUDE_PATHS=.git,.hg
 SAVE_DIR=docs
 OUTPUT_DIR=docs
@@ -10,3 +13,5 @@ TEMPLATE=default.html
 NAV_TITLE=Documentation
 THEME=default
 USE_EXTERNAL_ASSETS=False
+
+
