Review and improve layout, configurations and stuff.
- Improved markup layout in the navigation template (added header);
- Styling fixes and adjustments for both default and dark themes;
- Updated example env file with new available configurations;
- Removed old template markup from the est file (moved to a static template);

--HG--
branch : dev

--- a/.env.example
+++ b/.env.example
@@ -13,5 +13,6 @@ TEMPLATE=default.html
 NAV_TITLE=Documentation
 THEME=default
 USE_EXTERNAL_ASSETS=False
-
-
+ROOT_INDEX_TITLE = "Documentation Home"
+ROOT_INDEX_SUB_TITLE = "Welcome to the Documentation"
+ROOT_INDEX_PROJECT_NAME = "Root"
