More complete HTML markup and options for website publishing.
- Added meta infos in the markup and in CSS classes;
- More complete HTML header in the template;
- Added theme option to act as a splash page on root page;

--HG--
branch : dev

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
+# -------------------------------------------------------------------- #
+# .env.example
+# The EXAMPLE ENV is just an example of an environment file you can 
+# define to customize some default app settings to fit your needs. 
+# You can copy and rename this file to `.env` and keep only the 
+# variables you want to override since the other will already take the 
+# default values defined below.  
+# 
+# -------------------------------------------------------------------- #
 ENV=dev
 LANG=en_US.UTF-8
 # Example with a simple string.
@@ -16,3 +25,5 @@ USE_EXTERNAL_ASSETS=False
 ROOT_INDEX_TITLE = "Documentation Home"
 ROOT_INDEX_SUB_TITLE = "Welcome to the Documentation"
 ROOT_INDEX_PROJECT_NAME = "Root"
+ROOT_DISPLAY_MENU = True
+ROOT_SPLASH_PAGE = False
